# gnome_google_music_info

./: README.md  meson.build  org.gnome.Google_Music_Info.json
data/: meson.build  org.gnome.Google_Music_Info.appdata.xml.in  org.gnome.Google_Music_Info.desktop.in  org.gnome.Google_Music_Info.gschema.xml
po/: POTFILES  meson.build
src/: google_music_info-window.c  google_music_info-window.h  google_music_info-window.ui  google_music_info.gresource.xml  json.c  main.c  meson.build
